--- a/OnlineShop/Views/Shared/_Layout.cshtml
+++ b/OnlineShop/Views/Shared/_Layout.cshtml
@@ -26,6 +26,13 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <style>
+
+        .error {
+            color: red;
+        }
+    </style>
+
 </head>
 <body>
     <header>
