--- a/OnlineShop/Areas/Customer/Views/User/Edit.cshtml
+++ b/OnlineShop/Areas/Customer/Views/User/Edit.cshtml
@@ -1,35 +1,26 @@
 ﻿@model OnlineShop.Models.ApplicationUser
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
 <br />
 
-<h2 class="text-info">Add New User</h2>
-<form asp-action="Create" method="post" id="user-form" enctype="multipart/form-data">
+<h2 class="text-info">Edit user</h2>
+<form asp-action="Edit" method="post" id="user-form" enctype="multipart/form-data">
     <div class="p-4 rounded border">
-        <h2>@ViewBag.meassage</h2>
         <div asp-validation-summary="ModelOnly" class="text-danger">
 
         </div>
-
+        <input type="hidden" asp-for="Id" value="@Model.Id" />
+        <h3> @ViewBag.message</h3>
         <div class="form-group row">
             <div class="col-2">
                 <label asp-for="UserName"></label>
             </div>
             <div class="col-5">
-                <input asp-for="UserName" class="form-control" />
+                <input asp-for="UserName" class="form-control" readonly="readonly" />
             </div>
             <span asp-validation-for="UserName" class="text-danger"></span>
-        </div>
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="PasswordHash"></label>
-            </div>
-            <div class="col-5">
-                <input asp-for="PasswordHash" class="form-control" type="password" />
-            </div>
-            <span asp-validation-for="PasswordHash" class="text-danger"></span>
         </div>
 
         <div class="form-group row">
@@ -51,17 +42,19 @@
             <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
 
-
         <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Save" />
+            <input type="submit" class="btn btn-primary" value="Update" />
             <a asp-action="Index" class="btn btn-success">Back to List</a>
         </div>
     </div>
 </form>
+
+
 @section Scripts{
-    @{ await Html.RenderPartialAsync(partialViewName: "_ValidationScriptsPartial");}
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
     <script>
-    $(document).ready(function () {
+        $(document).ready(function () {
             $("#user-form").validate({
                 rules: {
                     UserName: {
@@ -80,4 +73,3 @@
         });</script>
 
 }
-
