--- a/OnlineShop/Areas/Customer/Views/User/Locout.cshtml
+++ b/OnlineShop/Areas/Customer/Views/User/Locout.cshtml
@@ -1,35 +1,27 @@
 ﻿@model OnlineShop.Models.ApplicationUser
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Locout";
 }
-
 <br />
 
-<h2 class="text-info">Add New User</h2>
-<form asp-action="Create" method="post" id="user-form" enctype="multipart/form-data">
+<h2 class="text-info">Locout user</h2>
+<form asp-action="Locout" method="post" id="user-form" enctype="multipart/form-data">
     <div class="p-4 rounded border">
-        <h2>@ViewBag.meassage</h2>
         <div asp-validation-summary="ModelOnly" class="text-danger">
 
         </div>
-
+        <input type="hidden" asp-for="Id" value="@Model.Id" />
+        <h3>@ViewBag.message</h3>
+        <h3>Do you want to locout this user ?</h3>
+        <br />
         <div class="form-group row">
             <div class="col-2">
                 <label asp-for="UserName"></label>
             </div>
             <div class="col-5">
-                <input asp-for="UserName" class="form-control" />
+                <input asp-for="UserName" class="form-control" readonly="readonly" />
             </div>
             <span asp-validation-for="UserName" class="text-danger"></span>
-        </div>
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="PasswordHash"></label>
-            </div>
-            <div class="col-5">
-                <input asp-for="PasswordHash" class="form-control" type="password" />
-            </div>
-            <span asp-validation-for="PasswordHash" class="text-danger"></span>
         </div>
 
         <div class="form-group row">
@@ -37,7 +29,7 @@
                 <label asp-for="FirstName"></label>
             </div>
             <div class="col-5">
-                <input asp-for="FirstName" class="form-control" />
+                <input asp-for="FirstName" class="form-control" readonly="readonly" />
             </div>
             <span asp-validation-for="FirstName" class="text-danger"></span>
         </div>
@@ -46,20 +38,22 @@
                 <label asp-for="LastName"></label>
             </div>
             <div class="col-5">
-                <input asp-for="LastName" class="form-control" />
+                <input asp-for="LastName" class="form-control" readonly="readonly" />
             </div>
             <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
 
-
         <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Save" />
+            <input type="submit" class="btn btn-primary" value="Lokout" />
             <a asp-action="Index" class="btn btn-success">Back to List</a>
         </div>
     </div>
 </form>
+
+
 @section Scripts{
-    @{ await Html.RenderPartialAsync(partialViewName: "_ValidationScriptsPartial");}
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
     <script>
     $(document).ready(function () {
             $("#user-form").validate({
@@ -80,4 +74,3 @@
         });</script>
 
 }
-
